# finetune

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: sft_train.jsonl  sft_valid.jsonl
src/finetune_lora_cpu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ft/: config.py  data.py  eval_json.py  generate_preds.py  infer.py  json_utils.py  train_sft_lora.py
