[project]
name = "finetune-lora-cpu"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.40.0",
  "datasets>=2.19.0",
  "peft>=0.11.0",
  "accelerate>=0.32.0",
  "torch>=2.2.0",
  "pydantic>=2.6.0",
  "jsonschema>=4.22.0",
  "rich>=13.7.0"
]

[project.scripts]
ft-train = "ft.train_sft_lora:main"
ft-infer = "ft.infer:main"

[tool.setuptools.packages.find]
where = ["src"]
